--- a/src/color-schemes/tiniri.scss
+++ b/src/color-schemes/tiniri.scss
@@ -74,7 +74,13 @@ https://tiniri.vlad.studio/
   --text-selection: #353a42;
   --text-highlight-bg: #ad514c44;
 }
-.theme-dark.tiniri-dark {
+.theme-dark.tiniri-dark,
+.theme-light.tiniri-light.contrast-light-vivid .titlebar,
+.theme-light.tiniri-light.contrast-light-vivid .status-bar,
+.theme-light.tiniri-light.contrast-light-vivid .workspace::before,
+.theme-light.tiniri-light.contrast-light-vivid .mod-sidedock,
+.theme-light.tiniri-light.contrast-light-vivid .mod-root .workspace-tab-header-container,
+.theme-light.tiniri-light.contrast-light-vivid .mod-root .workspace-tab-header-container::before {
   --background-primary: #1f2122;
   --background-primary-alt: #1f2122;
   --background-secondary: #1b1d1e;
